# django-hstore-widget

./: .babelrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  jest.config.ts  package-lock.json  package.json  pyproject.toml  readme.md  stencil.config.ts  tsconfig.json  webpack.config.js  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: CI.yml
django_admin_hstore_widget/: widgets.py
django_admin_hstore_widget/static/admin/js/django_admin_hstore_widget/: django-hstore-widget.entry.js  django-hstore-widget.esm.js  django-hstore-widget.js  index-778e5b67.js  index-d4b3491e.js  index.js  p-5fd011bd.entry.js  p-81aabb43.entry.js  p-a3c15fc6.entry.js  p-c54ab965.entry.js  p-c76398a1.js  p-e1255160.js  p-f350f2d0.js
django_admin_hstore_widget/templates/: django_admin_hstore_widget.html
django_hstore_widget/: apps.py  forms.py  widgets.py
django_hstore_widget/static/admin/js/django_hstore_widget/: django-hstore-widget.esm.js  p-0f50db55.js  p-19f93e37.entry.js  p-2d057ff6.entry.js  p-4d326581.entry.js  p-6827c154.entry.js  p-6aae9cd6.entry.js  p-72c8cb5f.entry.js  p-7f61e167.js  p-8fbb857d.entry.js  p-90ad8700.entry.js  p-943ab2a7.entry.js  p-9af118fb.js  p-a7ac178a.js  p-b2f91d83.entry.js  p-c9802f72.entry.js  p-d23bd249.entry.js  p-d57e2868.js  p-d858b589.entry.js  p-da2cc61f.entry.js  p-f350f2d0.js  p-f54713f7.entry.js
django_hstore_widget/templates/: django_hstore_widget.html
public/: index.html
scripts/: copy.py  copy.sh  copy.ts
src/: components.d.ts  index.html  index.ts
src/components/django-hstore-widget/: django-hstore-widget.css  django-hstore-widget.scss  django-hstore-widget.tsx  readme.md
src/components/django-hstore-widget/test/: django-hstore-widget.e2e.ts  django-hstore-widget.spec.tsx
src/django_hstore_widget/: checks.py  forms.py  widgets.py
src/django_hstore_widget/migrations/: 0001_initial.py
src/django_hstore_widget/templates/: django_hstore_widget.html
src/frontend/: components.d.ts  index.ts
src/frontend/components/django-hstore-widget/: django-hstore-widget.css  django-hstore-widget.scss  django-hstore-widget.tsx
src/frontend/components/django-hstore-widget/test/: django-hstore-widget.e2e.ts  django-hstore-widget.spec.ts
src/frontend/components/image-icon/: image-icon.tsx
src/frontend/lib/: classnames.ts
src/frontend/stores/: image.ts
src/lib/: injectStyles.ts
tests/: conftest.py  test_hstore_field.py
tests/cat/: admin.py  apps.py  forms.py  models.py  urls.py
tests/cat/migrations/: 0001_initial.py
