[project]
name = "django-hstore-widget"
version = "0.0.16"
description = "Human friendly HStoreWidget. Continual of django-admin-hstore-widget."
readme = "README.md"
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
    { name = "Alexandre Dufour", email = "adufour@poka.io" },
]
maintainers = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["django"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Bug Tracker" = "https://github.com/baseplate-admin/django-hstore-widget/issues"
homepage = "https://github.com/baseplate-admin/django-hstore-widget"
repository = "https://github.com/baseplate-admin/django-hstore-widget"

[tool.uv]
default-groups = ["dev","test"]

[dependency-groups]
dev = ["django-hstore-widget"]
test = [
    "pytest<9.0.0,>=8.0.1",
    "pytest-django<5.0.0,>=4.8.0",
    "psycopg<4,>=3",
    "selenium<5.0.0,>=4.26.1",
]

[tool.uv.sources]
django-hstore-widget = { workspace = true }
